# BokutachiHook

./: meson.build
BokutachiHook/: meson.build
BokutachiHook/include/BokutachiHook/: JSON.h  mem.h  winver.h
BokutachiHook/src/: dllmain.cpp  mem.cpp
BokutachiLauncher/: meson.build
BokutachiLauncher/src/: GetAuth.cpp  Injector.cpp  LaunchGame.cpp  Main.cpp
